--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
-name = "labs"
+name = "lab4"
 version = "0.1.0"
 description = "Add your description here"
-requires-python = ">=3.12"
+readme = "README.md"
+requires-python = ">=3.14"
 dependencies = [
     "pytest>=8.4.2",
     "logging>=0.4.9.6",
+    "rich>=14.2.0"
 ]
